# Advent-Of-Code

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
2022/day1/: a.out  day1  day1-test.txt  day1.cpp
2022/day2/: day2  day2.cpp
2022/day3/: day3  day3.cpp
2022/day4/: day4  day4.cpp
2022/day5/: day5  day5-boxes.txt  day5.cpp
2022/day6/: day6  day6-test.txt  day6.cpp
2022/day7/: day7.cpp
2023/day1/: day_1_part2.js  test.txt
2023/day10/: day10.js
2023/day11/: day11.js
2023/day2/: day_2.c  day_2_part2.c
2023/day3/: day3PartTwo.js  test.txt
2023/day4/: test.txt
2023/day5/: day5.js  input.txt  test.txt
2023/day6/: day6.js
2023/day7/: day7.js  day7p2.js
2023/day8/: day8.js
2023/day9/: day9.js  day9p2.js
2024/day1/: a.out  day1.cpp
2024/day10/: day10  day10.cpp
2024/day11/: day11  day11.cpp
2024/day12/: day12  day12.cpp
2024/day2/: day2.cpp
2024/day3/: day3  day3.cpp
2024/day4/: day4  day4.cpp
2024/day5/: day5  day5.cpp  in-test2.txt
2024/day6/: day6  day6.cpp
2024/day7/: day7  day7.cpp  in-test.txt
2024/day8/: day8  day8.cpp
2024/day9/: day9  day9.cpp
2025/day1/: day1.cpp  in-test.txt
2025/day2/: day2.cpp  day2p2.cpp
2025/day3/: day3.cpp  day3p2.cpp  in-test.txt
2025/day4/: day4.cpp  day4p2.cpp
2025/day5/: day5.cpp  day5p2.cpp
2025/day6/: day6p2.cpp
2025/day7/: day7.cpp  day7p2.cpp
day1/: a.out  day_1_part2.c  day_1_part2.js  test.txt
day10/: day10.js  day10p2.js
day11/: day11.js
day2/: a.out  day_2.c  test.txt
day3/: day3.js  day3PartTwo.js  test.txt
day4/: day4.js  day4Part2.js
day5/: day5.js  day5p2.js
day6/: day6.js  day6part2.js
day7/: day7.js  day7p2.js  test.txt
day9/: day9.js
helpers/: helpers.cpp  helpers.h
